vlib/v/checker/tests/alias_map_unknown_op_overloading_err.vv
type Map = map[string]string

pub fn new_map() Map {
	return Map(map{
		'23': 'str'
	})
}

fn (a Map) + (b Map) Map {
	str := b['23']
	return Map(map{
		'34': str + '12'
	})
}

fn main() {
	mut a := new_map()
	b := new_map()
	println(a - b)
    a -= b
}
